# Morset

./: CMakeLists.txt  LICENSE  README.md
src/: audio.cpp  audio.h  input.cpp  input.h  main.cpp  morse.cpp  morse.h  stats.cpp  stats.h  trainer.cpp  trainer.h  ui.cpp  ui.h  utils.cpp  utils.h
